{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 97,
  "lineage": "0ad3079d-97e9-80dc-2dc5-5f2a43f4944a",
  "resources": [
    {
      "module": "module.nat1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bec5b690341dce53",
            "domain": "vpc",
            "id": "eipalloc-0bec5b690341dce53",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-92-199-107.compute-1.amazonaws.com",
            "public_ip": "54.92.199.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-nat-instance"
            },
            "tags_all": {
              "Name": "main-nat-instance"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.sub1.aws_route_table.nat_gateway",
            "module.sub1.aws_route_table_association.nat_gateway",
            "module.sub1.aws_subnet.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.nat1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bec5b690341dce53",
            "association_id": "eipassoc-0989c44097147d590",
            "connectivity_type": "public",
            "id": "nat-07720c5c00afaee1a",
            "network_interface_id": "eni-05a23a2d045b6bfb6",
            "private_ip": "172.20.0.54",
            "public_ip": "54.92.199.107",
            "subnet_id": "subnet-071e54c7f5267cfc6",
            "tags": {
              "Name": "main-nat-instance"
            },
            "tags_all": {
              "Name": "main-nat-instance"
            }
          },
          "dependencies": [
            "module.nat1.aws_eip.nat",
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.sub1.aws_route_table.nat_gateway",
            "module.sub1.aws_route_table_association.nat_gateway",
            "module.sub1.aws_subnet.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.nat1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:route-table/rtb-05409c3397be77266",
            "id": "rtb-05409c3397be77266",
            "owner_id": "458831214565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07720c5c00afaee1a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07966e6d54c735c9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat1.aws_eip.nat",
            "module.nat1.aws_nat_gateway.default",
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.sub1.aws_route_table.nat_gateway",
            "module.sub1.aws_route_table_association.nat_gateway",
            "module.sub1.aws_subnet.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.nat1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e6812dc5b89eeac",
            "route_table_id": "rtb-05409c3397be77266",
            "subnet_id": "subnet-06be4e5b898473626"
          },
          "dependencies": [
            "module.nat1.aws_eip.nat",
            "module.nat1.aws_nat_gateway.default",
            "module.nat1.aws_route_table.instance",
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.sub1.aws_route_table.nat_gateway",
            "module.sub1.aws_route_table_association.nat_gateway",
            "module.sub1.aws_subnet.default",
            "module.sub2.aws_subnet.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:security-group/sg-0b3cafd4750ba2231",
            "description": "Test Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b3cafd4750ba2231",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "458831214565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg1"
            },
            "tags_all": {
              "Name": "sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07966e6d54c735c9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sub1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:internet-gateway/igw-0e92d5d7737e131ea",
            "id": "igw-0e92d5d7737e131ea",
            "owner_id": "458831214565",
            "tags": {
              "Name": "main-public-sub"
            },
            "tags_all": {
              "Name": "main-public-sub"
            },
            "vpc_id": "vpc-07966e6d54c735c9d"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sub1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:route-table/rtb-04ae81261516a79f8",
            "id": "rtb-04ae81261516a79f8",
            "owner_id": "458831214565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e92d5d7737e131ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07966e6d54c735c9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sub1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0628e7f10d14d5348",
            "route_table_id": "rtb-04ae81261516a79f8",
            "subnet_id": "subnet-071e54c7f5267cfc6"
          },
          "dependencies": [
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.sub1.aws_route_table.nat_gateway",
            "module.sub1.aws_subnet.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sub1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:subnet/subnet-071e54c7f5267cfc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071e54c7f5267cfc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458831214565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public-sub"
            },
            "tags_all": {
              "Name": "main-public-sub"
            },
            "vpc_id": "vpc-07966e6d54c735c9d"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sub2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:subnet/subnet-06be4e5b898473626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06be4e5b898473626",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458831214565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-privat-sub"
            },
            "tags_all": {
              "Name": "main-privat-sub"
            },
            "vpc_id": "vpc-07966e6d54c735c9d"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vm1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:458831214565:instance/i-0f110226e88ae44ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f110226e88ae44ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-081ae76c3a74b5aa1"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081ae76c3a74b5aa1",
            "private_dns": "ip-172-20-0-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.0.15",
            "public_ip": "3.82.229.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-05b7ba1734ad608a1",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071e54c7f5267cfc6",
            "tags": {
              "Name": "vm-1"
            },
            "tags_all": {
              "Name": "vm-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3cafd4750ba2231"
            ]
          },
          "dependencies": [
            "module.key1.aws_key_pair.default",
            "module.sg1.aws_security_group.default",
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.sub1.aws_route_table.nat_gateway",
            "module.sub1.aws_route_table_association.nat_gateway",
            "module.sub1.aws_subnet.default",
            "module.vm1.aws_network_interface.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vm1",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:network-interface/eni-081ae76c3a74b5aa1",
            "id": "eni-081ae76c3a74b5aa1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:94:12:85:79:95",
            "owner_id": "458831214565",
            "private_ip": "172.20.0.15",
            "private_ip_list": [
              "172.20.0.15"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.20.0.15"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b3cafd4750ba2231"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071e54c7f5267cfc6"
          },
          "dependencies": [
            "module.key1.aws_key_pair.default",
            "module.sg1.aws_security_group.default",
            "module.sub1.aws_internet_gateway.nat_gateway",
            "module.sub1.aws_route_table.nat_gateway",
            "module.sub1.aws_route_table_association.nat_gateway",
            "module.sub1.aws_subnet.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vm2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:458831214565:instance/i-044079e165235fb40",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044079e165235fb40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09ffcda61e58ae2b1"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ffcda61e58ae2b1",
            "private_dns": "ip-172-20-1-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-044b3ab73ea428c7c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06be4e5b898473626",
            "tags": {
              "Name": "vm-2"
            },
            "tags_all": {
              "Name": "vm-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3cafd4750ba2231"
            ]
          },
          "dependencies": [
            "module.key1.aws_key_pair.default",
            "module.sg1.aws_security_group.default",
            "module.sub2.aws_internet_gateway.nat_gateway",
            "module.sub2.aws_route_table.nat_gateway",
            "module.sub2.aws_route_table_association.nat_gateway",
            "module.sub2.aws_subnet.default",
            "module.vm2.aws_network_interface.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vm2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:network-interface/eni-09ffcda61e58ae2b1",
            "id": "eni-09ffcda61e58ae2b1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:cf:38:10:a5:ed",
            "owner_id": "458831214565",
            "private_ip": "172.20.1.90",
            "private_ip_list": [
              "172.20.1.90"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.20.1.90"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b3cafd4750ba2231"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06be4e5b898473626"
          },
          "dependencies": [
            "module.key1.aws_key_pair.default",
            "module.sg1.aws_security_group.default",
            "module.sub2.aws_internet_gateway.nat_gateway",
            "module.sub2.aws_route_table.nat_gateway",
            "module.sub2.aws_route_table_association.nat_gateway",
            "module.sub2.aws_subnet.default",
            "module.vpc1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458831214565:vpc/vpc-07966e6d54c735c9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0f473c311c58e6da5",
            "default_route_table_id": "rtb-024c7e6eda6ddaeb1",
            "default_security_group_id": "sg-0bdf6068742fed99a",
            "dhcp_options_id": "dopt-0e26e7ad2dc9d04d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07966e6d54c735c9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024c7e6eda6ddaeb1",
            "owner_id": "458831214565",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}